[package]
name = "async-sqlx-session"
version = "0.4.1"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "sqlx session store for async-session"
readme = "README.md"
repository = "https://github.com/jbr/async-sqlx-session"
documentation = "https://docs.rs/async-sqlx-session"
license = "MIT OR Apache-2.0"
keywords = ["sessions", "sqlx", "sqlite", "postgres", "mysql"]
categories = ["web-programming::http-server", "web-programming", "database"]

[package.metadata.docs.rs]
features = ["pg", "sqlite", "mysql", "async_std"]

[features]
default = []
sqlite = ["sqlx/sqlite"]
pg = ["sqlx/postgres", "sqlx/json"]
mysql = ["sqlx/mysql", "sqlx/json"]

[dependencies]
async-session = "3.0.0"
sqlx = { version = "0.6.2", features = ["chrono", "runtime-tokio-native-tls"] }
